--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@
 #Proteus Backups & temp Files
 Project Backups/
 button circuit.pdsprj.*
-analogIn sim.pdsprj.*
+*.pdsprj.DESKTOP-R48JDJ9.Kenny Serrudo.workspace
