--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+
+# VisualStudioCode #
+*.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+.history/
+
+*.vsix
+
+.history
+.ionide
+
+
 # Prerequisites
 *.d
 
@@ -36,22 +53,3 @@ Project Backups/
 
 *.workspace
 
-
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
-
-# Local History for Visual Studio Code
-.history/
-
-# Built Visual Studio Code Extensions
-*.vsix
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
